sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:1: error: ';' expected but '(' found.
trouverJoueur(couleur:Int):Array[Int](2) = {
                                     ^