sort.baseball.SelectBaseball.scala.code
trouverJoueur(couleur:Int):Array[Int](2) = {
  
  //retourne [Base,Position] du premier jouer de la couleur spécifiée
  var Base = -1
  var Pos = -1
  
  for (b <- 0 to getNombreBases(), p <- 0 to getNombrePositions()) {
    
    if (getCouleurJoueur(b,p) == couleur) {
      
      return [Base,Pos]
      
    }
    
  }
  
  return [Base,Pos]
  
}

def rameneTrou(base:Int) {
  
  //ramene le trou devant la base spécifiée, ne fait rien si ça touche à ce qui est déjà trié
  if (getTrouBase() > base+1) {
    
    for (c <- getTrouBase-1 to base+1) {}
    
  }
  
}
override def run() {
  
  for (c <- 0 to getNombreBases()-1) {
    
    //premier de la base
    
    //deuxième de la base
    
  }
  
}